--- a/index.html
+++ b/index.html
@@ -4,9 +4,155 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="assets/favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    
+<!-- Header -->
+    <header class="header">
+        <div class="container">
+<!-- Navigation -->
+            <nav class="nav">
+                <ul class="nav-list">
+                  <!-- <img class="logo" src="assets/img/Logo.png" alt="Mylogo"> -->
+                  <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
+                  <li class="nav-item"><a href="#summary" class="nav-link">Summary</a></li>
+                  <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
+                  <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
+                  <li class="nav-item"><a href="#experience" class="nav-link">Experience</a></li>
+                  <li class="nav-item"><a href="#courses" class="nav-link">Courses</a></li>
+                  <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
+                  <li class="nav-item"><a href="#english" class="nav-link">English</a></li>
+                </ul>
+              </nav>
+        </div>
+    </header>
+<!-- Main -->
+    <main class="main">
+        <div class="container main-container">
+            <section class="section section-img">
+                <img src="assets/img/photo.jpg" alt="my-photo" class="photo">
+            </section>
+            <section class="section section-title-y">
+                <h1 class="section-title">
+                    Yuliia Vasylevska
+                </h1>
+                <h5>Junior Front-End Developer</h5>
+            </section>
+            <section class="section" id="contacts">
+                <h2 class="section-title">
+                    Contacts
+                </h2>
+                <ul class="contact-list">
+                    <li class="phone">Phone</li>
+                    <li class="e-mail">E-mail</li>
+                    <li class="linkedin">Linkedin</li>
+                    <li class="git">Git</li>
+                    <li class="discord">Discord</li>
+                </ul>
+            </section>
+            <section class="section" id="summary">
+                <h2 class="section-title">
+                    Summary
+                </h2>
+                <p class="about">I have 3 years of experience in the positions on IT Recruiter and HR Manager. I worked in start-ups, gaming, recruitment agency. I want to retrain as a developer. I am ready to take new challenges, not afraid to learn, improve and get new knowledge. Look forward to improving my skills and becoming a part of a professional team.</p>
+            </section>
+            <section class="section" id="skills">
+                <h2 class="section-title">
+                    Skills
+                </h2>
+                <ul class="tech-skills-list">
+                    <li class="tach-skills">HTML5</li>
+                    <li class="tach-skills">CSS3</li>
+                    <li class="tach-skills">JavaScript</li>
+                    <li class="tach-skills">GIT</li>
+                    <li class="tach-skills">Figma</li>
+                </ul>
+            </section>
+            <section class="section" id="projects">
+                <h2 class="section-title">
+                    Projects
+                </h2>
+            </section>
+            <section class="section" id="experience">
+                <h2 class="section-title">
+                    Work Experience
+                </h2>
+                <ul class="exp-list">
+                    <li>QIT Software</li>
+                    <li>Head of HRD</li>
+                    <li>July 2021 - up to now</li>
+                </ul>
+                <ul class="exp-list">
+                    <li>Rendmate</li>
+                    <li>HR Generalist</li>
+                    <li>Desember 2020 - July 2021</li>
+                </ul>
+                <ul class="exp-list">
+                    <li>Argument</li>
+                    <li>IT Recruiter</li>
+                    <li>November 2019 - November 2020</li>
+                </ul>
+            </section>
+            <section class="section" id="courses">
+                <h2 class="section-title">
+                    Courses
+                </h2>
+                <ul class="courses-list">
+                    <li>RS School</li>
+                    <li>Front-End Developer</li>
+                    <li>June 2022 - up to now</li>
+                </ul>
+                <ul class="courses-list">
+                    <li>A-Level</li>
+                    <li>Basics Development</li>
+                    <li>January 2020 - February 2020</li>
+                </ul>
+                <ul class="courses-list">
+                    <li>Source IT</li>
+                    <li>IT Recruiting + HR</li>
+                    <li>April 2019 - Jule 2019</li>
+                </ul>
+            </section>
+            <section class="section" id="education">
+                <h2 class="section-title">
+                    Education
+                </h2>
+                <p class="university">
+                    Kharkiv Humanitarian-Pedagogical Academy
+                </p>
+            </section>
+            <section class="section" id="english">
+                <h2 class="section-title">
+                    English
+                </h2>
+                <p class="eng-list">
+                    Intermediate
+                </p>
+            </section>
+        </div>
+    </main>
+<!-- Footer -->
+    <footer>
+        <div class="container footer">
+            <div class="logo-footer">
+                <a href="https://rs.school/js-stage0/" target="_blank">
+                    <img src="/assets/img/logo-rsschool3.png" alt="RsSchool">
+                </a>
+            </div>
+            <p class="year-footer">
+                © Yuliia Vasylevska 2022
+            </p>
+            <div class="favicon-footer">
+                <a href="https://github.com/YuVasylevska" target="_blank"> <img src="/assets/img/github.png" alt="GitHub"></a>
+                <a href="https://www.linkedin.com/in/yuliia-vasylevska-a92b11187/" target="_blank"> <img src="/assets/img/linkedin.png" alt="Linkedin"></a>
+                <a href="https://www.facebook.com/julia.vasilevskaya.522" target="_blank"> <img src="/assets/img/facebook.png" alt="Facebook"></a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
