--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 <!-- Header -->
     <header class="header">
-        <div class="container">
+        <div class="container container-nav">
 <!-- Navigation -->
             <nav class="nav">
                 <ul class="nav-list">
@@ -48,11 +48,11 @@
                     Contacts
                 </h2>
                 <ul class="contact-list">
-                    <li class="phone">Phone</li>
-                    <li class="e-mail">E-mail</li>
-                    <li class="linkedin">Linkedin</li>
-                    <li class="git">Git</li>
-                    <li class="discord">Discord</li>
+                    <li class="phone">Phone: +38 067 540 79 60</li>
+                    <li class="e-mail">E-mail: Yuliia.Vasylevska@gmail.com</li>
+                    <li class="linkedin">Linkedin: Yuliia.Vasylevska</li>
+                    <li class="git">Git: YuVasylevska</li>
+                    <li class="discord">Discord: Yuliia Vasylevska#6233</li>
                 </ul>
             </section>
             <section class="section" id="summary">
@@ -73,7 +73,7 @@
                     <li class="tach-skills">Figma</li>
                 </ul>
             </section>
-            <section class="section" id="projects">
+            <section class="section section-project" id="projects">
                 <h2 class="section-title">
                     Projects
                 </h2>
