--- a/index.html
+++ b/index.html
@@ -141,16 +141,16 @@
         <div class="container footer">
             <div class="logo-footer">
                 <a href="https://rs.school/js-stage0/" target="_blank">
-                    <img src="/assets/img/logo-rsschool3.png" alt="RsSchool">
+                    <img src="assets/img/logo-rsschool3.png" alt="RsSchool">
                 </a>
             </div>
             <p class="year-footer">
                 © Yuliia Vasylevska 2022
             </p>
             <div class="favicon-footer">
-                <a href="https://github.com/YuVasylevska" target="_blank"> <img src="/assets/img/github.png" alt="GitHub"></a>
-                <a href="https://www.linkedin.com/in/yuliia-vasylevska-a92b11187/" target="_blank"> <img src="/assets/img/linkedin.png" alt="Linkedin"></a>
-                <a href="https://www.facebook.com/julia.vasilevskaya.522" target="_blank"> <img src="/assets/img/facebook.png" alt="Facebook"></a>
+                <a href="https://github.com/YuVasylevska" target="_blank"> <img src="assets/img/github.png" alt="GitHub"></a>
+                <a href="https://www.linkedin.com/in/yuliia-vasylevska-a92b11187/" target="_blank"> <img src="assets/img/linkedin.png" alt="Linkedin"></a>
+                <a href="https://www.facebook.com/julia.vasilevskaya.522" target="_blank"> <img src="assets/img/facebook.png" alt="Facebook"></a>
             </div>
         </div>
     </footer>
