--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 <!-- Main -->
     <main class="main">
         <div class="container main-container">
-            <section class="section section-img">
+            <div class="section section-img">
                 <img src="assets/img/photo.jpg" alt="my-photo" class="photo">
-            </section>
+            </div>
             <section class="section section-title-y">
                 <h1 class="section-title">
                     Yuliia Vasylevska
@@ -77,6 +77,12 @@
                 <h2 class="section-title">
                     Projects
                 </h2>
+                <ul class="project-list">
+                    <li>
+                        <a class="project-url" href="https://yuvasylevska.github.io/rsschool-cv/" target="_blank">
+                        RsSchool-CV</a>
+                    </li>
+                </ul>
             </section>
             <section class="section" id="experience">
                 <h2 class="section-title">
@@ -148,9 +154,12 @@
                 © Yuliia Vasylevska 2022
             </p>
             <div class="favicon-footer">
-                <a href="https://github.com/YuVasylevska" target="_blank"> <img src="assets/img/github.png" alt="GitHub"></a>
-                <a href="https://www.linkedin.com/in/yuliia-vasylevska-a92b11187/" target="_blank"> <img src="assets/img/linkedin.png" alt="Linkedin"></a>
-                <a href="https://www.facebook.com/julia.vasilevskaya.522" target="_blank"> <img src="assets/img/facebook.png" alt="Facebook"></a>
+                <a href="https://github.com/YuVasylevska" target="_blank"> 
+                    <img src="assets/img/github.png" alt="GitHub"></a>
+                <a href="https://www.linkedin.com/in/yuliia-vasylevska-a92b11187/" target="_blank"> 
+                    <img src="assets/img/linkedin.png" alt="Linkedin"></a>
+                <a href="https://www.facebook.com/julia.vasilevskaya.522" target="_blank"> 
+                    <img src="assets/img/facebook.png" alt="Facebook"></a>
             </div>
         </div>
     </footer>
